# atlas_optimization_suite

./: .env.example  .gitignore  .~lock.codex_prompts.odt#  README.md  codex_prompts.odt  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: README.md  atlas_api.py  pyproject.toml
backend/api/: __init__.py  main.py
backend/atlas_opt/: __init__.py  cards.py  compiler.py  constraints.py  cvxpy_atom_overrides.json  cvxpy_backend.py  cvxpy_inspector.py  cvxpy_registry.py  desk.py  diagnostics.py  evaluator.py  expressions.py  functions.py  kpis.py  objectives.py  optimizer.py  properties.py  queries.py  reports.py  schema.py
backend/atlas_opt_core/: __init__.py  codegen.py  compiler.py  diagnostics.py  examples.py  inspector.py  registry.py  results.py  schema.py  solver.py  symbols.py
backend/atlas_opt_core/config/: cvxpy_pseudo_symbols.json  cvxpy_symbol_overrides.json
backend/atlas_opt_core/migrations/: __init__.py
backend/atlas_opt_core/tools/: __init__.py  sync_cvxpy_symbols.py
backend/tests/: test_atlas_opt_core.py  test_builtin_examples.py  test_cvxpy_inspector.py  test_cvxpy_registry.py  test_cvxpy_symbol_sync.py  test_desk.py  test_expressions.py  test_functions.py  test_golden_examples.py  test_imports.py  test_optimizer_api.py  test_queries.py  test_schema.py  test_semantic_objects.py
commands/: synching_and_running
deployments/: README.md
docs/: .~lock.Features_and_Future.odt#  Features_and_Future.odt  atlas_command_ir_architecture.md  atlas_optimization_suite_plan.md  atlas_reuse_audit.md  custom-cards.md  custom-domains-audit.md  (+4 more)
(+313 files in other folders)
