[project]
name = "atlas-optimization-backend"
version = "0.1.0"
description = "Python modeling core for the Atlas Optimization Suite."
requires-python = ">=3.10"
dependencies = ["pydantic>=2,<3", "fastapi>=0.110,<1", "cvxpy>=1.4,<2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
