[project]
name = "atlas-optimization-backend"
version = "0.1.0"
description = "Python modeling core for the Atlas Optimization Suite."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "numpy>=1.24,<3",
  "cvxpy>=1.4,<2",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "pytest>=8,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
